--- a/pages/home.html
+++ b/pages/home.html
@@ -16,6 +16,33 @@
     </div>
 </div>
 
+<!-- Закрепленный альбом -->
+<div id="pinned-album-container" style="display: none;"></div>
+
 <script>
+    function renderPinnedAlbum() {
+        const container = document.getElementById('pinned-album-container');
+        if (!container) return;
+        
+        if (window.pinnedAlbum) {
+            container.style.display = 'block';
+            container.innerHTML = `
+                <h2 style="margin:40px 0 20px;">Закреплено</h2>
+                <div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px;">
+                    <div class="album-card" onclick="location.hash='#mayhem'">
+                        <img src="${window.pinnedAlbum.cover}" style="width:100%; border-radius:8px; margin-bottom:12px;">
+                        <b style="font-size:15px;">${window.pinnedAlbum.name}</b><br>
+                        <small style="color:#7a7a7a">${window.pinnedAlbum.sub}</small>
+                    </div>
+                </div>
+            `;
+        } else {
+            container.style.display = 'none';
+            container.innerHTML = '';
+        }
+    }
+    
+    renderPinnedAlbum();
+    window.renderPinnedAlbum = renderPinnedAlbum;
     lucide.createIcons();
 </script>
