--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
+<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px; position:relative; z-index:2;">
     <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
     <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;" 
          onclick="const r = Math.floor(Math.random() * window.albumTracks.length); window.playTrack(r, window.albumTracks);">
