--- a/pages/home.html
+++ b/pages/home.html
@@ -1,4 +1,4 @@
-<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px; position: relative; z-index: 2;">
+<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
     <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
     <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;" 
          onclick="const r = Math.floor(Math.random() * window.albumTracks.length); window.playTrack(r, window.albumTracks);">
@@ -6,9 +6,9 @@
     </div>
 </div>
 
-<h2 style="margin-bottom:20px; position: relative; z-index: 2;">Альбомы на сегодня</h2>
+<h2 style="margin-bottom:20px;">Альбомы на сегодня</h2>
 
-<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; position: relative; z-index: 2;">
+<div style="display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px;">
     <div class="album-card" onclick="location.hash='#mayhem'">
         <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:100%; border-radius:8px; margin-bottom:12px;">
         <b style="font-size:15px;">Mayhem</b><br>
@@ -17,7 +17,7 @@
 </div>
 
 <!-- Закрепленный альбом -->
-<div id="pinned-album-container" style="display: none; position: relative; z-index: 2;"></div>
+<div id="pinned-album-container" style="display: none;"></div>
 
 <script>
     function renderPinnedAlbum() {
