--- a/pages/home.html
+++ b/pages/home.html
@@ -1,8 +1,7 @@
-<div style="height:260px; border-radius:12px; background: linear-gradient(135deg, #4b3621, #000); display:flex; flex-direction:column; justify-content:center; align-items:center; margin-bottom:30px;">
-    <h1 style="font-size:55px; font-weight:800; margin-bottom:15px;">Мой Vibe</h1>
-    <div class="p-btn" style="width:65px; height:65px; background:#1ed760; border-radius:50%;" 
-         onclick="const r = Math.floor(Math.random() * window.albumTracks.length); window.playTrack(r, window.albumTracks);">
-        <i data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
+<div class="vibe-container">
+    <h1 class="vibe-title">Мой Vibe</h1>
+    <div class="vibe-play-btn" id="vibePlayBtn" onclick="window.toggleVibePlay()">
+        <i id="vibePlayIcon" data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
     </div>
 </div>
 
