--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,24 @@
-<div class="vibe-container">
-    <h1 class="vibe-title">Мой Vibe</h1>
-    <div class="vibe-play-btn" id="vibePlayBtn" onclick="window.toggleVibePlay()">
-        <i id="vibePlayIcon" data-lucide="play" fill="black" color="black" size="30" style="margin-left:4px"></i>
+<div class="vibe-card">
+    <div class="vibe-particles">
+        <div class="vibe-particle" style="top:20%; left:10%; animation-delay:0s;"></div>
+        <div class="vibe-particle" style="top:70%; left:80%; animation-delay:2s;"></div>
+        <div class="vibe-particle" style="top:40%; left:90%; animation-delay:4s;"></div>
+        <div class="vibe-particle" style="top:80%; left:20%; animation-delay:6s;"></div>
+        <div class="vibe-particle" style="top:10%; left:70%; animation-delay:8s;"></div>
+        <div class="vibe-particle" style="top:60%; left:30%; animation-delay:10s;"></div>
+        <div class="vibe-particle" style="top:30%; left:50%; animation-delay:12s;"></div>
+        <div class="vibe-particle" style="top:90%; left:60%; animation-delay:14s;"></div>
+    </div>
+    <div class="vibe-title-wrapper">
+        <div class="vibe-title">
+            МОЙ <span>VIBE</span>
+        </div>
+        <div class="vibe-sub">
+            СЛУЧАЙНЫЙ ТРЕК
+        </div>
+        <div class="vibe-button" id="vibePlayBtn" onclick="window.toggleVibePlay()">
+            <i id="vibePlayIcon" data-lucide="play" fill="white" color="white" size="36" style="margin-left:4px;"></i>
+        </div>
     </div>
 </div>
 
