--- a/pages/videos.html
+++ b/pages/videos.html
@@ -24,58 +24,58 @@
     <!-- ГРИД С ВИДЕО -->
     <div id="video-grid" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 24px;">
         <!-- Taylor Swift - 22 -->
-        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11561/FvHevpyAMu_Taylor_Swift_-_22_-_Taylor_Swift_1080p_h264.mp4', '22', 'Taylor Swift', '3:52', 'https://i.scdn.co/image/ab67616d0000b2737c9b2b7a1a4e3b3e4f7c8d9e')">
+        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11561/FvHevpyAMu_Taylor_Swift_-_22_-_Taylor_Swift_1080p_h264.mp4', '22', 'Taylor Swift', '3:52', 'https://s3.k-connect.ru/static/uploads/comments/11561/sddefault.jpg')">
             <div class="video-thumbnail">
-                <video src="https://s3.k-connect.ru/static/uploads/post/11561/FvHevpyAMu_Taylor_Swift_-_22_-_Taylor_Swift_1080p_h264.mp4" style="width:100%; height:100%; object-fit:cover; border-radius:12px;" preload="metadata"></video>
+                <img src="https://s3.k-connect.ru/static/uploads/comments/11561/sddefault.jpg" style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
                 <div class="video-duration">3:52</div>
                 <div class="video-play-overlay">
                     <i data-lucide="play" size="40" color="white" fill="white"></i>
                 </div>
             </div>
             <div style="display:flex; gap:12px; margin-top:12px;">
-                <img src="https://i.scdn.co/image/ab67616d0000b2737c9b2b7a1a4e3b3e4f7c8d9e" style="width:40px; height:40px; border-radius:6px;" onerror="this.src='https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg'">
+                <img src="https://s3.k-connect.ru/static/uploads/post/11563/ZiWYMMBLcz_channels4_profile%20(1).webp" style="width:40px; height:40px; border-radius:50%; object-fit:cover;">
                 <div>
                     <b style="font-size:15px;">22</b>
                     <br>
-                    <small style="color:#7a7a7a;">Taylor Swift • 2.3M просмотров</small>
+                    <small style="color:#7a7a7a;">Taylor Swift</small>
                 </div>
             </div>
         </div>
 
         <!-- Taylor Swift - Opalite -->
-        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11560/UipqebVHl8_Taylor_Swift_-_Opalite_Official_Music_Video_-_Taylor_Swift_1080p_h264.mp4', 'Opalite', 'Taylor Swift', '4:15', 'https://i.scdn.co/image/ab67616d0000b2737c9b2b7a1a4e3b3e4f7c8d9e')">
+        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11560/UipqebVHl8_Taylor_Swift_-_Opalite_Official_Music_Video_-_Taylor_Swift_1080p_h264.mp4', 'Opalite', 'Taylor Swift', '4:15', 'https://s3.k-connect.ru/static/uploads/comments/11560/maxresdefault.jpg')">
             <div class="video-thumbnail">
-                <video src="https://s3.k-connect.ru/static/uploads/post/11560/UipqebVHl8_Taylor_Swift_-_Opalite_Official_Music_Video_-_Taylor_Swift_1080p_h264.mp4" style="width:100%; height:100%; object-fit:cover; border-radius:12px;" preload="metadata"></video>
+                <img src="https://s3.k-connect.ru/static/uploads/comments/11560/maxresdefault.jpg" style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
                 <div class="video-duration">4:15</div>
                 <div class="video-play-overlay">
                     <i data-lucide="play" size="40" color="white" fill="white"></i>
                 </div>
             </div>
             <div style="display:flex; gap:12px; margin-top:12px;">
-                <img src="https://i.scdn.co/image/ab67616d0000b2737c9b2b7a1a4e3b3e4f7c8d9e" style="width:40px; height:40px; border-radius:6px;" onerror="this.src='https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg'">
+                <img src="https://s3.k-connect.ru/static/uploads/post/11563/ZiWYMMBLcz_channels4_profile%20(1).webp" style="width:40px; height:40px; border-radius:50%; object-fit:cover;">
                 <div>
                     <b style="font-size:15px;">Opalite</b>
                     <br>
-                    <small style="color:#7a7a7a;">Taylor Swift • 1.8M просмотров</small>
+                    <small style="color:#7a7a7a;">Taylor Swift</small>
                 </div>
             </div>
         </div>
 
         <!-- Lady Gaga - Abracadabra -->
-        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11559/ABInwxgnTA_Lady_Gaga_-_Abracadabra_Official_Music_Video_-_LadyGagaVEVO_1080p_h264_2.mp4', 'Abracadabra', 'Lady Gaga', '3:43', 'https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg')">
+        <div class="video-card" data-category="pop" onclick="window.playVideo('https://s3.k-connect.ru/static/uploads/post/11559/ABInwxgnTA_Lady_Gaga_-_Abracadabra_Official_Music_Video_-_LadyGagaVEVO_1080p_h264_2.mp4', 'Abracadabra', 'Lady Gaga', '3:43', 'https://s3.k-connect.ru/static/uploads/comments/11559/sddefault.jpg')">
             <div class="video-thumbnail">
-                <video src="https://s3.k-connect.ru/static/uploads/post/11559/ABInwxgnTA_Lady_Gaga_-_Abracadabra_Official_Music_Video_-_LadyGagaVEVO_1080p_h264_2.mp4" style="width:100%; height:100%; object-fit:cover; border-radius:12px;" preload="metadata"></video>
+                <img src="https://s3.k-connect.ru/static/uploads/comments/11559/sddefault.jpg" style="width:100%; height:100%; object-fit:cover; border-radius:12px;">
                 <div class="video-duration">3:43</div>
                 <div class="video-play-overlay">
                     <i data-lucide="play" size="40" color="white" fill="white"></i>
                 </div>
             </div>
             <div style="display:flex; gap:12px; margin-top:12px;">
-                <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:40px; height:40px; border-radius:6px;">
+                <img src="https://s3.k-connect.ru/static/music/1475/5955/1770656744_cover.jpeg" style="width:40px; height:40px; border-radius:50%; object-fit:cover;">
                 <div>
                     <b style="font-size:15px;">Abracadabra</b>
                     <br>
-                    <small style="color:#7a7a7a;">Lady Gaga • 45M просмотров</small>
+                    <small style="color:#7a7a7a;">Lady Gaga</small>
                 </div>
             </div>
         </div>
@@ -349,15 +349,16 @@
                 const titleEl = card.querySelector('b');
                 const artistEl = card.querySelector('small');
                 const durationEl = card.querySelector('.video-duration');
-                const imgEl = card.querySelector('.video-thumbnail video');
-                const coverEl = card.querySelector('img');
+                const coverEl = card.querySelector('img:first-child');
+                const avatarEl = card.querySelector('img:last-child');
                 
                 return {
                     id: index,
                     title: titleEl?.textContent || 'Без названия',
-                    artist: artistEl?.textContent.split('•')[0].trim() || 'Неизвестный исполнитель',
+                    artist: artistEl?.textContent || 'Неизвестный исполнитель',
                     duration: durationEl?.textContent || '3:00',
                     thumbnail: coverEl?.src || '',
+                    avatar: avatarEl?.src || '',
                     url: card.getAttribute('onclick')?.match(/'([^']+)'/)?.filter((m, i) => i === 1)?.[0] || ''
                 };
             });
